2012-08-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoFontEnumerator.m: Allow for Windows default
	fonts.
	* Source/win32/w32_GLcontext.m,
	* Source/x11/XGGLContext.m: Implement 10.6 methods to get/set the
	CGLContextObj.

2012-06-21  Eric Wasylishen  <ewasylishen@gmail.com>

	* configure.ac: use AC_CHECK_LIB to check for cairo if pkg-config
	is not available
	* configure: regenerate

2012-05-14  Quentin Mathe  <quentin.mathe@gmail.com>

	* Source/gsc/GSContext.m (+initialize): Protected +initialize from being 
	called multiple times because of subclasses. As a result, this 
	eliminates a gtable memory leak (e.g. +initialize sent to both GSContext 
	and CairoContext at backend initialization time), and prevents the 
	gstate stack to be reset while still in use (e.g. the program enumerates 
	classes at runtime and sends messages to them... +initialize might be 
	sent to GSStreamContext in such a case). 

2012-05-12  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/x11/XIMInputServer.m: Remove the locale setting code.
	Use the correct #ifdef check for Xutf8LookupString, and use
	that function if available; otherwise use XLookupString.
	Interpret the return value of XLookupString as Latin-1.

2012-03-22  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/x11/XGServerEvent.m: Make the GSModifiersAreKeys
	default to YES, by renaming the default to GSModifiersAreNotKeys.
	This should fix bug 25659; for example, in Ink you can now
	open the color panel with <Shift>+<Alt>+c or <Alt>+<Shift>+c.
	* Documentation/Back/DefaultsSummary.gsdoc: Update docs for
	GSModifiersAreNotKeys.

2012-02-20 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m: Set the filter to BILINEAR for all
	patterns we use.

2012-02-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/gsc/GSGState.m (-GSSetFillColor:, -GSSetStrokeColor:):
	Fix potentially uninitialized color space element when setting
	fill and stroke colors.

2012-02-19 Fred Kiefer <FredKiefer@gmx.de>
